[package]
name = "hash-timestamp"
version = "1.0.0"
description = "A smart contract that fixes the timestamp of a hash"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hash_timestamp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
